--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -1,129 +1,137 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lambda School Data Science\n",
-    "\n",
-    "*Unit 2, Sprint 1, Module 1*\n",
-    "\n",
-    "---"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "assignment_regression_classification_1.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.3"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "7IXUfiQ2UKj6"
-   },
-   "source": [
-    "# Regression 1\n",
-    "\n",
-    "## Assignment\n",
-    "\n",
-    "You'll use another **New York City** real estate dataset. \n",
-    "\n",
-    "But now you'll **predict how much it costs to rent an apartment**, instead of how much it costs to buy a condo.\n",
-    "\n",
-    "The data comes from renthop.com, an apartment listing website.\n",
-    "\n",
-    "- [ ] Look at the data. Choose a feature, and plot its relationship with the target.\n",
-    "- [ ] Use scikit-learn for linear regression with one feature. You can follow the [5-step process from Jake VanderPlas](https://jakevdp.github.io/PythonDataScienceHandbook/05.02-introducing-scikit-learn.html#Basics-of-the-API).\n",
-    "- [ ] Define a function to make new predictions and explain the model coefficient.\n",
-    "- [ ] Organize and comment your code.\n",
-    "\n",
-    "> [Do Not Copy-Paste.](https://docs.google.com/document/d/1ubOw9B3Hfip27hF2ZFnW3a3z9xAgrUDRReOEo-FHCVs/edit) You must type each of these exercises in, manually. If you copy and paste, you might as well not even do them. The point of these exercises is to train your hands, your brain, and your mind in how to read, write, and see code. If you copy-paste, you are cheating yourself out of the effectiveness of the lessons.\n",
-    "\n",
-    "## Stretch Goals\n",
-    "- [ ] Do linear regression with two or more features.\n",
-    "- [ ] Read [The Discovery of Statistical Regression](https://priceonomics.com/the-discovery-of-statistical-regression/)\n",
-    "- [ ] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapter 2.1: What Is Statistical Learning?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "o9eSnDYhUGD7"
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "\n",
-    "# If you're on Colab:\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    DATA_PATH = 'https://raw.githubusercontent.com/LambdaSchool/DS-Unit-2-Applied-Modeling/master/data/'\n",
-    "\n",
-    "# If you're working locally:\n",
-    "else:\n",
-    "    DATA_PATH = '../data/'\n",
-    "    \n",
-    "# Ignore this Numpy warning when using Plotly Express:\n",
-    "# FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
-    "import warnings\n",
-    "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "4S2wXSrFV_g4"
-   },
-   "outputs": [],
-   "source": [
-    "# Read New York City apartment rental listing data\n",
-    "import pandas as pd\n",
-    "df = pd.read_csv(DATA_PATH+'apartments/renthop-nyc.csv')\n",
-    "assert df.shape == (49352, 34)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remove outliers: \n",
-    "# the most extreme 1% prices,\n",
-    "# the most extreme .1% latitudes, &\n",
-    "# the most extreme .1% longitudes\n",
-    "df = df[(df['price'] >= 1375) & (df['price'] <= 15500) & \n",
-    "        (df['latitude'] >=40.57) & (df['latitude'] < 40.99) &\n",
-    "        (df['longitude'] >= -74.1) & (df['longitude'] <= -73.38)]"
-   ]
-  }
- ],
- "metadata": {
-  "colab": {
-   "collapsed_sections": [],
-   "name": "assignment_regression_classification_1.ipynb",
-   "provenance": [],
-   "version": "0.3.2"
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aQjFk5Ay5CSC",
+        "colab_type": "text"
+      },
+      "source": [
+        "Lambda School Data Science\n",
+        "\n",
+        "*Unit 2, Sprint 1, Module 1*\n",
+        "\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "7IXUfiQ2UKj6"
+      },
+      "source": [
+        "# Regression 1\n",
+        "\n",
+        "## Assignment\n",
+        "\n",
+        "You'll use another **New York City** real estate dataset. \n",
+        "\n",
+        "But now you'll **predict how much it costs to rent an apartment**, instead of how much it costs to buy a condo.\n",
+        "\n",
+        "The data comes from renthop.com, an apartment listing website.\n",
+        "\n",
+        "- [ ] Look at the data. Choose a feature, and plot its relationship with the target.\n",
+        "- [ ] Use scikit-learn for linear regression with one feature. You can follow the [5-step process from Jake VanderPlas](https://jakevdp.github.io/PythonDataScienceHandbook/05.02-introducing-scikit-learn.html#Basics-of-the-API).\n",
+        "- [ ] Define a function to make new predictions and explain the model coefficient.\n",
+        "- [ ] Organize and comment your code.\n",
+        "\n",
+        "> [Do Not Copy-Paste.](https://docs.google.com/document/d/1ubOw9B3Hfip27hF2ZFnW3a3z9xAgrUDRReOEo-FHCVs/edit) You must type each of these exercises in, manually. If you copy and paste, you might as well not even do them. The point of these exercises is to train your hands, your brain, and your mind in how to read, write, and see code. If you copy-paste, you are cheating yourself out of the effectiveness of the lessons.\n",
+        "\n",
+        "## Stretch Goals\n",
+        "- [ ] Do linear regression with two or more features.\n",
+        "- [ ] Read [The Discovery of Statistical Regression](https://priceonomics.com/the-discovery-of-statistical-regression/)\n",
+        "- [ ] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapter 2.1: What Is Statistical Learning?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "o9eSnDYhUGD7",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "\n",
+        "import sys\n",
+        "\n",
+        "# If you're on Colab:\n",
+        "if 'google.colab' in sys.modules:\n",
+        "    DATA_PATH = 'https://raw.githubusercontent.com/LambdaSchool/DS-Unit-2-Applied-Modeling/master/data/'\n",
+        "\n",
+        "# If you're working locally:\n",
+        "else:\n",
+        "    DATA_PATH = '../data/'\n",
+        "    \n",
+        "# Ignore this Numpy warning when using Plotly Express:\n",
+        "# FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+        "import warnings\n",
+        "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "4S2wXSrFV_g4",
+        "colab": {}
+      },
+      "source": [
+        "# Read New York City apartment rental listing data\n",
+        "import pandas as pd\n",
+        "df = pd.read_csv(DATA_PATH+'apartments/renthop-nyc.csv')\n",
+        "assert df.shape == (49352, 34)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hAk5Se8P5CSl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Remove outliers: \n",
+        "# the most extreme 1% prices,\n",
+        "# the most extreme .1% latitudes, &\n",
+        "# the most extreme .1% longitudes\n",
+        "df = df[(df['price'] >= 1375) & (df['price'] <= 15500) & \n",
+        "        (df['latitude'] >=40.57) & (df['latitude'] < 40.99) &\n",
+        "        (df['longitude'] >= -74.1) & (df['longitude'] <= -73.38)]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
 }
