--- a/module2-regression-2/LS_DS10_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS10_212_assignment.ipynb
@@ -169,11 +169,11 @@
       "metadata": {
         "id": "GymEw_TKgi5-",
         "colab_type": "code",
+        "outputId": "09a6bda7-4a4b-4fbc-dc95-434acc47c7ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 501
-        },
-        "outputId": "b3436a1d-8fb0-46c0-9f99-7be6baac1c30"
+          "height": 513
+        }
       },
       "source": [
         "df.head()"
@@ -451,11 +451,11 @@
       "metadata": {
         "id": "in-vxm3jjSOM",
         "colab_type": "code",
+        "outputId": "dc35021f-5f59-4775-bd95-17c1ef5fef7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 166
-        },
-        "outputId": "01adf298-c17f-442a-f488-a3bde54171a7"
+          "height": 173
+        }
       },
       "source": [
         "df.describe(exclude='number')"
@@ -510,7 +510,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>top</th>\n",
-              "      <td>2016-05-14 05:23:52</td>\n",
+              "      <td>2016-06-05 01:32:36</td>\n",
               "      <td></td>\n",
               "      <td>Broadway</td>\n",
               "      <td>3333 Broadway</td>\n",
@@ -532,7 +532,7 @@
               "                    created description  ... street_address interest_level\n",
               "count                 48817       47392  ...          48807          48817\n",
               "unique                48148       37853  ...          15135              3\n",
-              "top     2016-05-14 05:23:52              ...  3333 Broadway            low\n",
+              "top     2016-06-05 01:32:36              ...  3333 Broadway            low\n",
               "freq                      3        1627  ...            174          33946\n",
               "\n",
               "[4 rows x 5 columns]"
@@ -550,11 +550,11 @@
       "metadata": {
         "id": "Ww-ZSuOolMCR",
         "colab_type": "code",
+        "outputId": "ff218a86-809d-4022-d89b-a4da1067f3bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 304
-        },
-        "outputId": "1943ff22-a84c-4b97-c75d-e49e49185974"
+          "height": 317
+        }
       },
       "source": [
         "df.describe(include='number')"
@@ -1005,11 +1005,11 @@
       "metadata": {
         "id": "ale3Uirxipb6",
         "colab_type": "code",
+        "outputId": "c6d46dc1-1af9-460c-b7aa-9390ca67dab0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "69d39372-b487-4125-a59a-79eeb82cc725"
+        }
       },
       "source": [
         "train.shape, test.shape"
@@ -1071,11 +1071,11 @@
       "metadata": {
         "id": "fwPXFoMZvQNz",
         "colab_type": "code",
+        "outputId": "9d875fe0-9e00-4828-db38-115488aa8e3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1a6fab14-d4dd-413d-af88-2f08173ce4be"
+        }
       },
       "source": [
         "features = ['bathrooms','bedrooms','latitude','longitude', 'total_perks', 'bed_2_bath']\n",
@@ -1086,7 +1086,7 @@
         "y_test = test[target]\n",
         "print(f'Linear Regression, dependent on: {features}')"
       ],
-      "execution_count": 53,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1102,16 +1102,16 @@
       "metadata": {
         "id": "Bvnim5C1yJxf",
         "colab_type": "code",
+        "outputId": "fab3a21a-0f0c-48b4-97e1-d163cac8adbc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f8b51133-7586-4b48-8902-a637c1a2fdce"
+        }
       },
       "source": [
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 54,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1123,7 +1123,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 15
         }
       ]
     },
@@ -1142,11 +1142,11 @@
       "metadata": {
         "id": "d1DeAtu2x0t9",
         "colab_type": "code",
+        "outputId": "c2e901ca-194e-4c25-9417-f6bb2f29488d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 134
-        },
-        "outputId": "3cdb6b79-d210-4b93-b002-eed3ff51f78b"
+          "height": 136
+        }
       },
       "source": [
         "# model.intercept_, model.coef_\n",
@@ -1154,7 +1154,7 @@
         "coefficients = pd.Series(model.coef_, features)\n",
         "print(coefficients.to_string())"
       ],
-      "execution_count": 55,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1184,29 +1184,41 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3UjXR86tcR4o",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.metrics import mean_squared_error\n",
+        "from sklearn.metrics import mean_absolute_error"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "vDYQzLF95iqR",
         "colab_type": "code",
+        "outputId": "c6d8a262-9b4a-4eac-c2b3-12782da2de52",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 67
-        },
-        "outputId": "68c9ed75-0e4e-4ec1-b1fa-119b3e48ee15"
+          "height": 68
+        }
       },
       "source": [
         "y_pred = model.predict(X_train)\n",
         "\n",
-        "from sklearn.metrics import mean_squared_error\n",
         "rmse = mean_squared_error(y_train, y_pred)**(.5)\n",
         "print(f'Train RMSE: ${rmse:,.2f}')\n",
         "\n",
-        "from sklearn.metrics import mean_absolute_error\n",
         "mae = mean_absolute_error(y_train, y_pred)\n",
         "print(f'Train MAE: ${mae:,.2f}')\n",
         "\n",
         "R2 = model.score(X_train, y_train)\n",
         "print(f'Train R^2: {R2:,.4f}')"
       ],
-      "execution_count": 56,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,27 +1236,25 @@
       "metadata": {
         "id": "xB34pmySx6SV",
         "colab_type": "code",
+        "outputId": "f70abf09-981a-44d2-e2fb-fc9e92443c4d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 67
-        },
-        "outputId": "990beb56-3300-48f8-8a95-f7e8498c1d1d"
+          "height": 68
+        }
       },
       "source": [
         "y_pred = model.predict(X_test)\n",
         "\n",
-        "from sklearn.metrics import mean_squared_error\n",
         "rmse = mean_squared_error(y_test, y_pred)**(.5)\n",
         "print(f'Test RMSE: ${rmse:,.2f}')\n",
         "\n",
-        "from sklearn.metrics import mean_absolute_error\n",
         "mae = mean_absolute_error(y_test, y_pred)\n",
         "print(f'Test MAE: ${mae:,.2f}')\n",
         "\n",
         "R2 = model.score(X_test, y_test)\n",
         "print(f'Test R^2: {R2:,.4f}')"
       ],
-      "execution_count": 58,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1258,17 +1268,181 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Fe3elr4QIKIB",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Statsmodels"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ncXnIQPInJmD",
+        "colab_type": "text"
+      },
+      "source": [
+        "Given my β-hat background, I also wanted to try out statsmodels. As expected, outcomes are almost identical. The small differences with scikit-learn could result from the different implementations of linear regression, as pointed out on https://stats.stackexchange.com/a/146809."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Jrz0APy29n_T",
+        "id": "pN-EDgSGIMVt",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# What's the best test MAE you can get? Share your score and features used with your cohort on Slack!"
+        "import statsmodels.api as sm\n",
+        "import statsmodels.formula.api as smf"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SfXzIgcrVe3z",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 612
+        },
+        "outputId": "5fa53466-a43b-4c07-f73a-6aa899b0b601"
+      },
+      "source": [
+        "# Fit regression model on train data\n",
+        "results = smf.ols('price ~ bedrooms + bathrooms + latitude + longitude + total_perks + bed_2_bath', data=train).fit()\n",
+        "\n",
+        "rmse = results.mse_resid**(.5)\n",
+        "print(f'Train RMSE: ${rmse:,.2f}')\n",
+        "\n",
+        "mae = mean_absolute_error(y_train, results.fittedvalues)\n",
+        "print(f'Train MAE: ${mae:,.2f}')\n",
+        "\n",
+        "R2 = results.rsquared\n",
+        "print(f'Train R^2: {R2:,.4f}')\n",
+        "\n",
+        "print(results.summary())"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train RMSE: $1,135.82\n",
+            "Train MAE: $730.00\n",
+            "Train R^2: 0.5846\n",
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:                  price   R-squared:                       0.585\n",
+            "Model:                            OLS   Adj. R-squared:                  0.585\n",
+            "Method:                 Least Squares   F-statistic:                     7468.\n",
+            "Date:                Wed, 04 Dec 2019   Prob (F-statistic):               0.00\n",
+            "Time:                        10:19:30   Log-Likelihood:            -2.6921e+05\n",
+            "No. Observations:               31844   AIC:                         5.384e+05\n",
+            "Df Residuals:                   31837   BIC:                         5.385e+05\n",
+            "Df Model:                           6                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "===============================================================================\n",
+            "                  coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "-------------------------------------------------------------------------------\n",
+            "Intercept   -1.175e+06   2.13e+04    -55.255      0.000   -1.22e+06   -1.13e+06\n",
+            "bedrooms      556.0289     23.800     23.363      0.000     509.381     602.677\n",
+            "bathrooms    1778.8742     30.811     57.735      0.000    1718.484    1839.265\n",
+            "latitude     1809.0558    174.514     10.366      0.000    1467.001    2151.110\n",
+            "longitude   -1.489e+04    241.626    -61.635      0.000   -1.54e+04   -1.44e+04\n",
+            "total_perks    46.2915      1.970     23.495      0.000      42.430      50.153\n",
+            "bed_2_bath   -145.0012     25.564     -5.672      0.000    -195.107     -94.896\n",
+            "==============================================================================\n",
+            "Omnibus:                    17532.836   Durbin-Watson:                   1.998\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           327993.155\n",
+            "Skew:                           2.250   Prob(JB):                         0.00\n",
+            "Kurtosis:                      18.065   Cond. No.                     2.83e+05\n",
+            "==============================================================================\n",
+            "\n",
+            "Warnings:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+            "[2] The condition number is large, 2.83e+05. This might indicate that there are\n",
+            "strong multicollinearity or other numerical problems.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9D4rLpgDMCt4",
+        "colab_type": "code",
+        "outputId": "2b0bc34d-de5d-4910-dfd5-2fea496035ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 612
+        }
+      },
+      "source": [
+        "# Fit regression model on test data\n",
+        "results = smf.ols('price ~ bedrooms + bathrooms + latitude + longitude + total_perks + bed_2_bath', data=test).fit()\n",
+        "\n",
+        "rmse = results.mse_resid**(.5)\n",
+        "print(f'Test RMSE: ${rmse:,.2f}')\n",
+        "\n",
+        "mae = mean_absolute_error(y_test, results.fittedvalues)\n",
+        "print(f'Test MAE: ${mae:,.2f}')\n",
+        "\n",
+        "R2 = results.rsquared\n",
+        "print(f'Test R^2: {R2:,.4f}')\n",
+        "\n",
+        "# Inspect the results\n",
+        "print(results.summary())"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test RMSE: $1,120.63\n",
+            "Test MAE: $739.01\n",
+            "Test R^2: 0.5961\n",
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:                  price   R-squared:                       0.596\n",
+            "Model:                            OLS   Adj. R-squared:                  0.596\n",
+            "Method:                 Least Squares   F-statistic:                     4173.\n",
+            "Date:                Wed, 04 Dec 2019   Prob (F-statistic):               0.00\n",
+            "Time:                        10:19:30   Log-Likelihood:            -1.4326e+05\n",
+            "No. Observations:               16973   AIC:                         2.865e+05\n",
+            "Df Residuals:                   16966   BIC:                         2.866e+05\n",
+            "Df Model:                           6                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "===============================================================================\n",
+            "                  coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "-------------------------------------------------------------------------------\n",
+            "Intercept   -1.213e+06   2.87e+04    -42.238      0.000   -1.27e+06   -1.16e+06\n",
+            "bedrooms      553.4358     30.842     17.944      0.000     492.982     613.889\n",
+            "bathrooms    1837.5477     40.827     45.008      0.000    1757.522    1917.574\n",
+            "latitude     2147.7665    230.872      9.303      0.000    1695.232    2600.301\n",
+            "longitude   -1.522e+04    327.709    -46.447      0.000   -1.59e+04   -1.46e+04\n",
+            "total_perks    46.2134      2.732     16.913      0.000      40.858      51.569\n",
+            "bed_2_bath   -156.2817     33.154     -4.714      0.000    -221.266     -91.297\n",
+            "==============================================================================\n",
+            "Omnibus:                     7947.887   Durbin-Watson:                   1.980\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            88148.392\n",
+            "Skew:                           1.969   Prob(JB):                         0.00\n",
+            "Kurtosis:                      13.447   Cond. No.                     2.83e+05\n",
+            "==============================================================================\n",
+            "\n",
+            "Warnings:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+            "[2] The condition number is large, 2.83e+05. This might indicate that there are\n",
+            "strong multicollinearity or other numerical problems.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
